# prob_mesh_mapping

./: LICENSE  README.md
code/: CMakeLists.txt  math.h  plane_estimation.cpp  plane_measurement_contribution.cpp  plane_quadric.cpp  plane_to_plane_merging.cpp  point_to_plane_merging.cpp  similarity_computation.cpp
code/motecarlo_estimation/: README.md  grid_values.csv  q_virtual_11.csv  q_virtual_33.csv
